--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "My Diary App: An app that allows user to jot down their thoughts online ",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "joi": "^13.1.0"
+    "joi": "^13.1.0",
+    "jsonwebtoken": "^8.3.0",
+    "pg": "^7.4.3",
+    "pg-promise": "^8.4.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -27,7 +33,8 @@
   },
   "scripts": {
     "test": "mocha --require babel-register ./server/test/test.js",
-    "start": "nodemon ./server/index.js --exec babel-node --presets env"
+    "start": "nodemon ./server/index.js --exec babel-node --presets env",
+    "db": "babel-node server/models/database.js"
   },
   "repository": {
     "type": "git",
